# conandemo-libfoobar

./: CMakeLists.txt  README.md  conanfile.txt
include/foobar/: foobar.h
source/: CMakeLists.txt  foobar.c
